<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7f3ff"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:padding="8dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageButton
            android:id="@+id/btnBack"
            android:onClick="quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:src="@drawable/ic_back"/>
        <TextView
            android:id="@+id/txtTitleCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/black"
            android:text="城市"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/black"
            android:text="@string/health_code"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:background="@android:color/transparent"
            android:onClick="showOptions"
            android:layout_gravity="right"
            android:textColor="#1668ff"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_more_horiz"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:id="@+id/bgHealthColor"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:background="@color/green"
                />
            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout android:visibility="visible"
                    android:id="@+id/panelLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_bg_qrcode"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_marginTop="18dp"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txtMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="56sp"
                            android:textStyle="bold"
                            android:alpha="0.8"
                            android:text="5"
                            android:textColor="@android:color/primary_text_light"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="56sp"
                            android:textStyle="normal"
                            android:alpha="0.8"
                            android:text="月"
                            android:textColor="@android:color/primary_text_light"/>
                        <TextView
                            android:id="@+id/txtDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="56sp"
                            android:textStyle="bold"
                            android:alpha="0.8"
                            android:text="15"
                            android:textColor="@android:color/primary_text_light"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="56sp"
                            android:textStyle="normal"
                            android:alpha="0.8"
                            android:text="日"
                            android:textColor="@android:color/primary_text_light"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="60sp"
                        android:textStyle="bold"
                        android:alpha="0.8"
                        android:text="09:21:34"
                        android:textColor="@android:color/primary_text_light"/>
                    <ImageView
                        android:background="@android:color/darker_gray"
                        android:alpha="0.2"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:id="@+id/layoutAccount"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtUserName"
                            android:textSize="20sp"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/primary_text_light"
                            android:text="@string/default_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_width="180dp"
                        android:layout_height="180dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/hz_qrcode_bg"
                            android:layout_centerInParent="true"/>
                        <ImageView
                            android:id="@+id/imgQrcode"
                            android:scaleType="fitCenter"
                            android:layout_centerInParent="true"
                            android:layout_width="168dp"
                            android:layout_height="168dp"/>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/txtHospitleTip"
                        android:text="@string/hospitle_tip"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:layout_margin="18dp"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rotation="180"
                            android:layout_marginRight="12dp"
                            android:textColor="#1668ff"
                            android:text="ⓘ"/>
                        <TextView
                            android:id="@+id/txtCheckpoints"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/secondary_text_light"
                            android:textSize="12sp"
                            android:text="@string/notes"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="18dp"
                        android:weightSum="3.0"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_weight="1.0"
                            android:textColor="#2d8df3"
                            android:onClick="showError"
                            android:text="@string/complain"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_weight="1.0"
                            android:textColor="#2d8df3"
                            android:onClick="showError"
                            android:text="@string/popular_question"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_weight="1.0"
                            android:textColor="#2d8df3"
                            android:onClick="showError"
                            android:text="@string/goto_hospitle"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:layout_margin="18dp"
                    android:background="@drawable/btn_bg"
                    android:text="健康应用"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
                <TextView
                    android:text="@string/data_share"
                    android:textSize="16sp"
                    android:textColor="@android:color/secondary_text_light"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:padding="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.4"
                        android:textColor="@android:color/primary_text_light"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:text="@string/hotline"/>
                    <TextView
                        android:id="@+id/txtHotline"
                        android:layout_width="wrap_content"
                        android:textColor="@android:color/primary_text_light"
                        android:alpha="0.4"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff001122"
                    android:alpha="0.4"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:text="@string/provider_hz"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="24dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/lang_zh_cn"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" / "/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="showError"
                        android:alpha="0.4"
                        android:text="@string/lang_en_us"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>